--- a/03_relacionamento_cliente.html
+++ b/03_relacionamento_cliente.html
@@ -33,7 +33,8 @@
     <nav id="toc" data-toc-scope="main.wrap" data-toc-levels="2,3">
         <div class="toc__header">
             <div class="toc__title">Sumário</div>
-            <button id="toc-pin" class="toc__pin" type="button" title="Fixar sumário" aria-label="Fixar sumário">📌</button>
+            <button id="toc-pin" class="toc__pin" type="button" title="Fixar sumário"
+                aria-label="Fixar sumário">📌</button>
         </div>
         <ul class="toc__list"></ul>
     </nav>
@@ -611,6 +612,7 @@
         }
     </script>
 
+    <script src="./js/layout.js" defer></script>
 </body>
 
 </html>
