--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -8,65 +9,67 @@
 </head>
 
 <body>
-<header>
-  <div class="wrap">
-    <div class="nav">
-      <div class="brand">
-        <a href="./index.html" style="text-decoration:none;">CPA</a>
-        <span class="badge">Modelo 2026 • Revisão Visual</span>
-      </div>
+  <header>
+    <div class="wrap">
+      <div class="nav">
+        <div class="brand">
+          <a href="./index.html" style="text-decoration:none;">CPA</a>
+          <span class="badge">Modelo 2026 • Revisão Visual</span>
+        </div>
 
-      <div class="links">
-        <a class="pill" href="./01_sfn.html">SFN (20%)</a>
-        <a class="pill" href="./02_produtos.html">Produtos (40%)</a>
-        <a class="pill" href="./03_relacionamento_cliente.html">Relacionamento (30%)</a>
-        <a class="pill" href="./04_inovacao_mercado.html">Inovação (10%)</a>
+        <div class="links">
+          <a class="pill" href="./01_sfn.html">SFN (20%)</a>
+          <a class="pill" href="./02_produtos.html">Produtos (40%)</a>
+          <a class="pill" href="./03_relacionamento_cliente.html">Relacionamento (30%)</a>
+          <a class="pill" href="./04_inovacao_mercado.html">Inovação (10%)</a>
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<main class="wrap">
-  <h1>CPA (2026) — curso completo em revisão visual</h1>
+  <main class="wrap layout">
+    <h1>CPA (2026) — curso completo em revisão visual</h1>
 
-  <section class="grid">
-    <a class="card card--link" href="./01_sfn.html">
-      <h2>1) Sistema Financeiro Nacional</h2>
-      <p>Estrutura, órgãos, funções e regras-base do SFN (20%).</p>
-      <div class="tag">Começar pelo essencial</div>
-    </a>
+    <section class="grid">
+      <a class="card card--link" href="./01_sfn.html">
+        <h2>1) Sistema Financeiro Nacional</h2>
+        <p>Estrutura, órgãos, funções e regras-base do SFN (20%).</p>
+        <div class="tag">Começar pelo essencial</div>
+      </a>
 
-    <a class="card card--link" href="./02_produtos.html">
-      <h2>2) Produtos do mercado financeiro</h2>
-      <p>Renda fixa, renda variável, fundos, previdência, crédito, pagamentos, derivativos etc. (40%).</p>
-      <div class="tag">Maior peso na prova</div>
-    </a>
+      <a class="card card--link" href="./02_produtos.html">
+        <h2>2) Produtos do mercado financeiro</h2>
+        <p>Renda fixa, renda variável, fundos, previdência, crédito, pagamentos, derivativos etc. (40%).</p>
+        <div class="tag">Maior peso na prova</div>
+      </a>
 
-    <a class="card card--link" href="./03_relacionamento_cliente.html">
-      <h2>3) Relacionamento com o cliente</h2>
-      <p>Finanças pessoais, perfil do cliente, orientação, conduta e atendimento (30%).</p>
-      <div class="tag">Cai muito e muita gente ignora</div>
-    </a>
+      <a class="card card--link" href="./03_relacionamento_cliente.html">
+        <h2>3) Relacionamento com o cliente</h2>
+        <p>Finanças pessoais, perfil do cliente, orientação, conduta e atendimento (30%).</p>
+        <div class="tag">Cai muito e muita gente ignora</div>
+      </a>
 
-    <a class="card card--link" href="./04_inovacao_mercado.html">
-      <h2>4) Inovação e desenvolvimento de mercado</h2>
-      <p>ESG/ASG, tendências, transformação digital e evolução do mercado (10%).</p>
-      <div class="tag">Objetivo e direto ao ponto</div>
-    </a>
-  </section>
+      <a class="card card--link" href="./04_inovacao_mercado.html">
+        <h2>4) Inovação e desenvolvimento de mercado</h2>
+        <p>ESG/ASG, tendências, transformação digital e evolução do mercado (10%).</p>
+        <div class="tag">Objetivo e direto ao ponto</div>
+      </a>
+    </section>
 
-  <section class="card" style="margin-top:16px;">
-    <h2>Como usar</h2>
-    <ul class="list">
-      <li>Estude na ordem: SFN → Produtos → Relacionamento → Inovação.</li>
-      <li>Use o sumário (toc) dentro de cada módulo pra navegar rápido.</li>
-      <li>Foque nos quadros, comparações e “pegadinhas” — é onde a prova te pega.</li>
-    </ul>
-  </section>
-</main>
+    <section class="card" style="margin-top:16px;">
+      <h2>Como usar</h2>
+      <ul class="list">
+        <li>Estude na ordem: SFN → Produtos → Relacionamento → Inovação.</li>
+        <li>Use o sumário (toc) dentro de cada módulo pra navegar rápido.</li>
+        <li>Foque nos quadros, comparações e “pegadinhas” — é onde a prova te pega.</li>
+      </ul>
+    </section>
+  </main>
 
-<footer class="wrap" style="padding-bottom:40px;">
-  <div class="muted">CPA • Modelo 2026 • Revisão Visual</div>
-</footer>
+  <footer class="wrap" style="padding-bottom:40px;">
+    <div class="muted">CPA • Modelo 2026 • Revisão Visual</div>
+  </footer>
+  <script src="./js/layout.js" defer></script>
 </body>
+
 </html>
