--- a/01_sfn.html
+++ b/01_sfn.html
@@ -9,26 +9,7 @@
 </head>
 
 <body>
-
-  <header>
-    <div class="wrap">
-      <div class="nav">
-        <div class="brand">
-          <a href="./index.html" style="text-decoration:none;">CPA</a>
-          <span class="badge">Modelo 2026</span>
-        </div>
-
-        <div class="links">
-          <a class="pill" href="./01_sfn.html" aria-current="page">SFN (20%)</a>
-          <a class="pill" href="./02_produtos.html">Produtos (40%)</a>
-          <a class="pill" href="./03_relacionamento_cliente.html">Relacionamento (30%)</a>
-          <a class="pill" href="./04_inovacao_mercado.html">Inovação (10%)</a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- TOC retrátil (mesma metodologia do antigo) -->
+<!-- TOC retrátil (mesma metodologia do antigo) -->
   <nav id="toc" data-toc-scope="main.wrap" data-toc-levels="2,3">
     <div class="toc__header">
       <div class="toc__title">Sumário</div>
@@ -1127,9 +1108,7 @@
   </main>
 
   <!-- ✅ mesmo JS antigo, só renomeado -->
-  <script src="./js/cpa-ui.js" defer></script>
-
-  <script>
+<script>
     function gradeQuiz(id) {
       const quiz = document.querySelector(`.quiz[data-quiz="${id}"]`);
       const qs = quiz.querySelectorAll(".q");
@@ -1163,8 +1142,10 @@
       document.getElementById(`res_${id}`).textContent = "Marca as alternativas e clica em CORRIGIR.";
     }
   </script>
+  <script src="./js/theme.js"></script>
+  <script src="./js/layout.js"></script>
+  <script src="./js/cpa-ui.js"></script>
 
-  <script src="./js/layout.js" defer></script>
 </body>
 
 </html>
