Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/02_produtos.html
+++ b/02_produtos.html
@@ -9,25 +9,7 @@
 </head>
 
 <body>
-  <header>
-    <div class="wrap">
-      <div class="nav">
-        <div class="brand">
-          <a href="./index.html" style="text-decoration:none;">CPA</a>
-          <span class="badge">Modelo 2026</span>
-        </div>
-
-        <div class="links">
-          <a class="pill" href="./01_sfn.html">SFN (20%)</a>
-          <a class="pill" href="./02_produtos.html" aria-current="page">Produtos (40%)</a>
-          <a class="pill" href="./03_relacionamento_cliente.html">Relacionamento (30%)</a>
-          <a class="pill" href="./04_inovacao_mercado.html">Inovação (10%)</a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- TOC retrátil (mesma metodologia do antigo) -->
+<!-- TOC retrátil (mesma metodologia do antigo) -->
   <nav id="toc" data-toc-scope="main.wrap" data-toc-levels="2,3">
     <div class="toc__header">
       <div class="toc__title">Sumário</div>
@@ -936,7 +918,6 @@
           </div>
         </div>
 
-
       </section>
 
       <!-- =========================
@@ -1118,9 +1099,10 @@
     </div>
 
   </main>
-
+  <script src="./js/theme.js"></script>
+  <script src="./js/layout.js"></script>
   <script src="./js/cpa-ui.js"></script>
-  <script src="./js/layout.js" defer></script>
+
 </body>
 
 </html>
