--- a/03_relacionamento_cliente.html
+++ b/03_relacionamento_cliente.html
@@ -9,27 +9,7 @@
 </head>
 
 <body>
-
-    <header>
-        <div class="wrap">
-            <div class="nav">
-                <div class="brand">
-                    <a href="./index.html" style="text-decoration:none;">CPA</a>
-                    <span class="badge">Modelo 2026</span>
-                </div>
-
-                <div class="links">
-                    <a class="pill" href="./01_sfn.html">SFN (20%)</a>
-                    <a class="pill" href="./02_produtos.html">Produtos (40%)</a>
-                    <a class="pill active" href="./03_relacionamento_cliente.html" aria-current="page">Relacionamento
-                        (30%)</a>
-                    <a class="pill" href="./04_inovacao_mercado.html">Inovação (10%)</a>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- TOC retrátil (mesma metodologia do antigo) -->
+<!-- TOC retrátil (mesma metodologia do antigo) -->
     <nav id="toc" data-toc-scope="main.wrap" data-toc-levels="2,3">
         <div class="toc__header">
             <div class="toc__title">Sumário</div>
@@ -574,10 +554,7 @@
 
         </section>
     </main>
-
-    <script src="./js/cpa-ui.js" defer></script>
-
-    <script>
+<script>
         function gradeQuiz(id) {
             const quiz = document.querySelector(`.quiz[data-quiz="${id}"]`);
             const qs = quiz.querySelectorAll(".q");
@@ -611,8 +588,10 @@
             document.getElementById(`res_${id}`).textContent = "Marca as alternativas e clica em CORRIGIR.";
         }
     </script>
+  <script src="./js/theme.js"></script>
+  <script src="./js/layout.js"></script>
+  <script src="./js/cpa-ui.js"></script>
 
-    <script src="./js/layout.js" defer></script>
 </body>
 
 </html>
