--- a/index.html
+++ b/index.html
@@ -9,25 +9,7 @@
 </head>
 
 <body>
-  <header>
-    <div class="wrap">
-      <div class="nav">
-        <div class="brand">
-          <a href="./index.html" style="text-decoration:none;">CPA</a>
-          <span class="badge">Modelo 2026 • Revisão Visual</span>
-        </div>
-
-        <div class="links">
-          <a class="pill" href="./01_sfn.html">SFN (20%)</a>
-          <a class="pill" href="./02_produtos.html">Produtos (40%)</a>
-          <a class="pill" href="./03_relacionamento_cliente.html">Relacionamento (30%)</a>
-          <a class="pill" href="./04_inovacao_mercado.html">Inovação (10%)</a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <main class="wrap layout">
+<main class="wrap layout">
     <h1>CPA (2026) — curso completo em revisão visual</h1>
 
     <section class="grid">
@@ -65,11 +47,10 @@
       </ul>
     </section>
   </main>
+  <script src="./js/theme.js"></script>
+  <script src="./js/layout.js"></script>
+  <script src="./js/cpa-ui.js"></script>
 
-  <footer class="wrap" style="padding-bottom:40px;">
-    <div class="muted">CPA • Modelo 2026 • Revisão Visual</div>
-  </footer>
-  <script src="./js/layout.js" defer></script>
 </body>
 
 </html>
